# QScript

./: LICENSE  README.md  pyproject.toml
.github/: CONTRIBUTING.md
adapters/playwright-python/: README.md  pyproject.toml
adapters/playwright-python/src/qscript_playwright/: handler.py
docs/: architecture.md  getting_started.md
tests/: homepage.qscript  link_crawl.qscript  seo_meta.qscript
