# adapters/playwright-python/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qscript-playwright"
version = "0.1.0"
description = "QScript adapter for Playwright (Python)"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "playwright>=1.20.0"
]

[project.scripts]
# this creates a `qscript-playwright` executable that runs your main()
qscript-playwright = "qscript_playwright.handler:cli"

[tool.setuptools.packages.find]
where = ["src"]
include = ["qscript_playwright*"]

